Wrapped image tag for rat render in div and set div to display as inline block to behave similar to image. Implementing health bar.

--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,13 @@ img {
 	width: 30px;
 }
 
+.critter-container {
+	height: 30px;
+	width: 30px;
+	display: inline-block;
+	position: absolute;
+}
+
 .whiteKnight {
 	position: absolute
 }
