--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,13 @@
 img {
 	height: 30px;
 	width: 30px;
+	display: block;
+	float: left;
 }
 
 .critter-container {
 	height: 30px;
 	width: 30px;
-	display: inline-block;
 	position: absolute;
 }
 
@@ -19,6 +20,17 @@ img {
 }
 
 .grid {
-	width:500px
-	height: 200px
+	width: auto;
+	height: auto;
+	border: 1px solid #ccc;
+}
+
+.grid > div {
+	line-height: 0;
+}
+
+.grid > div::after {
+	content: "";
+	clear: both;
+	display: table;
 }
